stopped input zoom on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
 }
 
 .language-container {
+	visibility: hidden;
 }
 
 .toggle-container {
